0.8.2
 - fix: catch OSError when trying to load a task that is on an
   unmounted network share (#48)
0.8.1
 - fix: missed a case for task dataset IDs that don't exist but
   have been stored in the persistent task dictionary
0.8.0
 - feat: allow to add datasets to a collection (#11)
 - fix: allow empty lines in PersistentTaskDatasetIDDict files
 - fix: properly handle task dataset IDs that don't exist (#19)
0.7.10
 - enh: improve spacing in GUI design (#44)
 - enh: make sure there are no uploads without RT-DC files
 - fix: download in "My Data" tab did not work (#42)
 - ref: remove old code that cleared old cache and
   get rid of the appdirs dependency
 - setup: make pyqt5 an optional dependency (#39)
0.7.9
 - fix: skip passing emtpy-valued API-Key (#41)
 - enh: added logging capabilities (#18)
0.7.8
 - setup: bump dclab from 0.38.1 to 0.38.2 (#40)
0.7.7
 - ref: migrate to package_revise for updating datasets (#28)
 - setup: bump dclab from 0.37.2 to 0.38.1
0.7.6
 - enh: add "create_task" function for generating custom .dcoraid-task
   files in Python scripts
 - fix: do not delete drafts that are in the upload queue (#36)
 - setup: bump dclab from 0.36.1 to 0.37.1
0.7.5
 - fix: fatal typo in 0.7.4 release
0.7.4
 - enh: implement indexing (id and index) in DBExtract
 - enh: make CKANAPI and APIInterrogator available in the root module
0.7.3
 - enh: check for CKAN version on startup (#38)
 - ref: add future-compatibility with `user_show` without `id`
 - setup: bump dclab from 0.35.6 to 0.36.1 (improved speed and
   fixed minor issues)
0.7.2
 - fix: when --version is passed, don't load the entire UI to prevent
   uploads/downlodas from blocking in the background
 - ref: add pyqtSlots where appropriate
0.7.1
 - fix: handle connection errors on startup when no internet connection
   is available (#34)
 - fix: QTimer timeout value for downloads and uploads was too short
 - fix: simplify error messages on connection errors in UI